--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,6 @@ edition = "2021"
 tui = "0.19.0"          # TUI
 crossterm = "0.25.0"    # terminal back-end
 arboard = "3.2.0"       # copy text to clipboard
+rpassword = "7.2.0"     # Password input library
+rusqlite = { version = "0.28.0", features = ["bundled-sqlcipher"] }     # SQLite database
+dirs = "4.0.0"
